[package]
name = "algen"
description = "A parallelized genetic algorithm runner"
version = "0.1.1"
authors = ["Josh Cole"]
edition = "2021"
license = "MIT"
keywords = ["genetic-algorithm", "genetic", "algorithm", "ga"]
categories = ["algorithms", "science", "simulation"]
repository = "https://github.com/SharpCoder/algen"
documentation = "https://docs.rs/algen/latest/algen/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
telemetry = ["dep:opentelemetry"]

[dependencies]
rand = "0.8.5"
rayon = "1.5"
opentelemetry = { version = "0.18.0", optional = true }